# agent-resume

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SPEC.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  pages.yml  release.yml
bindings/go/: README.md  go.mod  hmac.go  hmac_test.go  schemas.go  validate.go  validate_test.go
bindings/go/testdata/: candidate.ccdm.json  event.sync-event.json
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/python/src/agent_resume/: __init__.py  sync.py  validate.py
bindings/python/src/agent_resume/schemas/: sync-event.v1.json
bindings/python/tests/: conftest.py  test_sync.py  test_validate.py
docs/: faq.md  migrating-to-2020-12.md
examples/: README.md  job.jdcdm.json  match.match-object.json
marketing/: LAUNCH-PLAN.md
site/: build.mjs  index.html  package-lock.json  package.json
site/assets/: docs.css  site.css
