[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-resume"
version = "1.0.0"
description = "Python binding for the agent-resume open standard: schema validators and SyncEvent HMAC for AI-native hiring."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "agent-resume contributors" }]
keywords = ["agent-resume", "json-schema", "hiring", "ccdm", "jdcdm", "hmac", "webhook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "jsonschema>=4.18",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://agent-resume.dev"
Repository = "https://github.com/agent-resume/agent-resume"

[tool.hatch.build.targets.wheel]
# The schemas/*.json live inside the package dir, so they are packaged as
# package data automatically (no MANIFEST needed).
packages = ["src/agent_resume"]

[tool.hatch.build.targets.sdist]
include = ["src/agent_resume", "tests", "README.md", "pyproject.toml"]
